--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Sample Site</title>
+    <meta charset="UTF-8">
+    <title>Pong Game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <main>
-    <h1>Sample Site</h1>
-  </main>
+    <div class="game-area">
+        <div id="leftPaddle" class="paddle"></div>
+        <div id="ball"></div>
+        <div id="rightPaddle" class="paddle"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
-
 </html>
