--- a/src/html/PongGame.html
+++ b/src/html/PongGame.html
@@ -955,7 +955,7 @@
 						this.velocity[1] = -1*this.velocity[1];
 					}
 
-                    if (other.name == "wall")
+                    if (other.name == "Wall")
                     {
                         m.CreateObject(1, Ball, [0,0,0], [0,0,0])
                         m.destroyList.push(this.id)
